# timestamper

./: AUTHORS  ChangeLog  autogen.sh  clean.sh  configure.ac  readme.md
src/: Makefile  Makefile.am  ts.c
