dnl Process this file with autoconf to produce a configure script.
AC_INIT(ts, 0.2, evermind@tuxfamily.org)
AC_CONFIG_AUX_DIR(config)
AC_CONFIG_SRCDIR(src/ts.c)
# Checks for header files.
AC_CHECK_HEADERS([inttypes.h stdlib.h string.h sys/time.h unistd.h])

# Checks for typedefs, structures, and compiler characteristics.
AC_TYPE_SIZE_T

AM_INIT_AUTOMAKE

AC_PROG_CC

AC_OUTPUT(Makefile src/Makefile)
